# FAB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
python/: KMgen.py  LogisticsRegression.py  TopicModeling.py  activationFunction.py  changeScoreFile.py  data.py  draw-script-cnn.py  draw-script-mlp.py  draw-script.py  draw.py  draw_priority.py  gradient-check.py  main.py  mlp.py  myio.py  pap_conv.py  param_norm.txt  param_org.txt  priority.py  score_record.py  util.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  ConfData.h  Option.cpp  Option.h  Statistics.cpp  Statistics.h
src/data/: CMakeLists.txt  DataHolder.cpp  DataHolder.h  DataLoader.cpp  DataLoader.h  DataPoint.cpp  DataPoint.h  Loader.cpp  Loader.h
src/distr/: CMakeLists.txt  IDMapper.cpp  IDMapper.h  IntervalEstimator.cpp  IntervalEstimator.h  Master.cpp  Master.h  MasterMode.cpp  ReceiverSelector.cpp  ReceiverSelector.h  Runner.cpp  Runner.h  Worker.cpp  Worker.h  WorkerMode.cpp
src/driver/: CMakeLists.txt  Dispatcher.hpp  MsgDriver.cpp  MsgDriver.h
src/driver/tools/: ReplyHandler.cpp  ReplyHandler.h  SyncUnit.cpp  SyncUnit.h
src/logging/: CMakeLists.txt  logging.cpp  logging.h
src/main/: CMakeLists.txt  Option.cpp  Option.h  ParameterIO.cpp  ParameterIO.h  calcgradient.cpp  calcpriority.cpp  func.cpp  func.h  generate.cpp  main.cpp  postprocess.cpp
src/math/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.h  accumulate.cpp  accumulate.h  activation_func.cpp  activation_func.h  norm.cpp  norm.h
src/message/: CMakeLists.txt  MType.cpp  MType.h
src/model/: CMakeLists.txt  CNN.cpp  CNN.h  CNNProxy.cpp  CNNProxy.h  Kernel.cpp  Kernel.h  KernelFactory.cpp  KernelFactory.h  LogisticRegression.cpp  LogisticRegression.h  MLP.cpp  MLP.h  MLPProxy.cpp  MLPProxy.h  Model.cpp  Model.h  ParamArchiver.cpp  ParamArchiver.h  Parameter.cpp  Parameter.h  ParameterProxy.cpp  ParameterProxy.h  Proxy.cpp  Proxy.h  RNN.cpp  RNN.h  TopicModel.h  mathfunc.cpp  mathfunc.h
src/model/app/: CNN.cpp  CNN.h  KMeans.cpp  KMeans.h  LogisticRegression.cpp  LogisticRegression.h  MLP.cpp  MLP.h  RNN.cpp  RNN.h  TopicModel.cpp  TopicModel.h
src/model/impl/: CNNProxy.cpp  CNNProxy.h  NodeBase.cpp  NodeBase.h  NodeImpl.cpp  NodeImpl.h  RNNProxy.h  RnnProxy.cpp  VectorNetwork.cpp  VectorNetwork.h
src/network/: CMakeLists.txt  NetworkImplMPI.cpp  NetworkImplMPI.h  NetworkThread.cpp  NetworkThread.h
src/network2/: CMakeLists.txt  NetworkImplMPI.cpp  NetworkImplMPI.h  NetworkThread.cpp  NetworkThread.h
src/serial/: CMakeLists.txt  serialization.h  serialize_general.hpp  serializer_basic.hpp  serializer_iter.hpp  serializer_tuple34.hpp
src/train/: Adam.h  BlockPSGD.cpp  BlockPSGD.h  BlockPrioritizedSGD.cpp  BlockPrioritizedSGD.h  CMakeLists.txt  EM.cpp  EM.h  EM_KMeans.cpp  EM_KMeans.h  GD.cpp  GD.h  Momentum.cpp  Momentum.h  PSGD.cpp  PSGD.h  PSGDBlock.cpp  PSGDBlock.h  PSGDDecay.cpp  PSGDDecay.h  PSGD_poc.cpp  PSGD_poc.h  PSGDwR.cpp  PSGDwR.h  PrioritizedSGD.cpp  PrioritizedSGD.h  Trainer.cpp  Trainer.h  TrainerFactory.cpp  TrainerFactory.h
src/train/develop/: Adam.cpp  Momentum.h
src/train/impl/: PrioritizedHolder.hpp  TopKHolder.hpp
src/train/priority/: PriorityDumper.cpp  PriorityDumper.h  PriorityHolder.cpp  PriorityHolder.h
src/train/psgd/: PriorityHolder.cpp  PriorityHolder.h
src/train/psgd_poc/: PSGDBlock.cpp  PSGDBlock.h  PSGDDecay.cpp  PSGDDecay.h  PSGD_dim.cpp  PSGD_dim.h  PSGD_log.cpp  PSGD_log.h  PSGD_poc.cpp  PSGD_poc.h  PSGD_point.cpp  PSGD_point.h  PSGD_sw.cpp  PSGD_sw.h
src/type_traits/: CMakeLists.txt  is_container.h  is_iterator.h  is_pair.h  type_traits_dummy.h
src/util/: CMakeLists.txt  FileEnumerator.cpp  FileEnumerator.h  Sleeper.cpp  Sleeper.h  Timer.cpp  Timer.h  Util.cpp  Util.h
test/: CMakeLists.txt  communication.cpp  data-load.cpp  lr-gd.cpp  mlp-bp.cpp  model-cnn.cpp  model-cnn2d.cpp  model-lr.cpp  model-mlp.cpp  model-rnn.cpp  mw-simple.cpp  mw-thread.cpp  train-simple.cpp  unit-worker.cpp
