set(IMPL_HEADERS
	impl/NodeBase.h
	impl/NodeImpl.h
	impl/MLPProxy.h
	impl/CNNProxy.h
	impl/RNNProxy.h
)
set(IMPL_SOURCES
	impl/NodeBase.cpp
	impl/NodeImpl.cpp
	impl/MLPProxy.cpp
	impl/CNNProxy.cpp
	impl/RNNProxy.cpp
)
set(HEADERS
	Kernel.h
	KernelFactory.h
	Parameter.h
	Model.h
	LogisticRegression.h
	MLP.h
	CNN.h
	TopicModel.h
	RNN.h
)
set(SOURCES
	Kernel.cpp
	KernelFactory.cpp
	Parameter.cpp
	Model.cpp
	LogisticRegression.cpp
	MLP.cpp
	CNN.cpp
	TopicModel.cpp
	RNN.cpp
)
add_library(model
	${IMPL_HEADERS} ${IMPL_SOURCES} ${HEADERS} ${SOURCES})
target_link_libraries(model math data util)
