set(IMPL_HEADERS
	impl/NodeBase.h
	impl/NodeImpl.h
	impl/VectorNetwork.h
	impl/MLPProxy.h
)
set(IMPL_SOURCES
	impl/NodeBase.cpp
	impl/NodeImpl.cpp
	impl/VectorNetwork.cpp
	impl/MLPProxy.cpp
)
set(HEADERS
	Kernel.h
	KernelFactory.h
	Parameter.h
	Model.h
	LogisticRegression.h
	MLP.h
	CNN.h
	TopicModel.h
	RNN.h
)
set(SOURCES
	Kernel.cpp
	KernelFactory.cpp
	Parameter.cpp
	Model.cpp
	LogisticRegression.cpp
	MLP.cpp
	CNN.cpp
	TopicModel.cpp
	RNN.cpp
)
add_library(model
	${IMPL_HEADERS} ${IMPL_SOURCES} ${HEADERS} ${SOURCES})
target_link_libraries(model math data util)
