set(IMPL_HEADERS
	impl/NodeBase.h
	impl/NodeImpl.h
	impl/VectorNetwork.h
	impl/MLPProxy.h
)
set(IMPL_SOURCES
	impl/NodeBase.cpp
	impl/NodeImpl.cpp
	impl/VectorNetwork.cpp
	impl/MLPProxy.cpp
)
set(APP_HEADERS
	app/LogisticRegression.h
	app/MLP.h
	app/CNN.h
	app/RNN.h
	app/TopicModel.h
	app/KMeans.h
)
set(APP_SOURCES
	app/LogisticRegression.cpp
	app/MLP.cpp
	app/CNN.cpp
	app/RNN.cpp
	app/TopicModel.cpp
	app/KMeans.cpp
)
set(HEADERS
	Kernel.h
	KernelFactory.h
	Parameter.h
	ParamArchiver.h
	Model.h
)
set(SOURCES
	Kernel.cpp
	KernelFactory.cpp
	Parameter.cpp
	ParamArchiver.cpp
	Model.cpp
)
add_library(model
	${IMPL_HEADERS} ${IMPL_SOURCES} ${HEADERS} ${SOURCES}
	${APP_HEADERS} ${APP_SOURCES})
target_link_libraries(model math data util)
