set(HEADERS
	Trainer.h
	GD.h
	EM.h
	EM_KMeans.h
	PSGD_poc.h
	BlockPrioritizedSGD.h
	TrainerFactory.h
)
set(SOURCES
	Trainer.cpp
	GD.cpp
	EM.cpp
	EM_KMeans.cpp
	PSGD_poc.cpp
	BlockPrioritizedSGD.cpp
	TrainerFactory.cpp
)
set(IMPL_FILES
	impl/PrioritizedHolder.hpp
	impl/TopKHolder.hpp
)
add_library(train
	${HEADERS} ${SOURCES} ${IMPL_FILES})