set(HEADERS
	Trainer.h
	GD.h
	EM.h
	EM_KMeans.h
	PSGD.h
	PSGDwR.h
	BlockPSGD.h
	TrainerFactory.h
)
set(SOURCES
	Trainer.cpp
	GD.cpp
	EM.cpp
	EM_KMeans.cpp
	PSGD.cpp
	PSGDwR.cpp
	BlockPSGD.cpp
	TrainerFactory.cpp
)
set(IMPL_FILES
	impl/PrioritizedHolder.hpp
	impl/TopKHolder.hpp
)
set(PSGD_POC_FILES
	psgd_poc/PSGD_poc.cpp
	psgd_poc/PSGD_point.cpp
	psgd_poc/PSGD_dim.cpp
)
add_library(train
	${HEADERS} ${SOURCES} ${IMPL_FILES} ${PSGD_POC_FILES})