set(HEADERS
	Trainer.h
	GD.h
	EM.h
	EM_KMeans.h
	PSGD.h
	TrainerFactory.h
)
set(SOURCES
	Trainer.cpp
	GD.cpp
	EM.cpp
	EM_KMeans.cpp
	PSGD.cpp
	TrainerFactory.cpp
)
set(IMPL_FILES
	impl/PrioritizedHolder.hpp
	impl/TopKHolder.hpp
	priority/PriorityDumper.h
	priority/PriorityDumper.cpp
	priority/PriorityHolder.h
	priority/PriorityHolder.cpp
)
set(PSGD_POC_FILES
	psgd_poc/PSGDBlock.cpp
	psgd_poc/PSGDDecay.cpp
	psgd_poc/PSGD_poc.cpp
	psgd_poc/PSGD_point.cpp
	psgd_poc/PSGD_dim.cpp
	psgd_poc/PSGD_log.cpp
)
add_library(train
	${HEADERS} ${SOURCES} ${IMPL_FILES} ${PSGD_POC_FILES})